# jax_newton_optim

./: .pylintrc  README.md  optim.py  poly_optim.py  pyproject.toml  vis.py
